Fix some errors to make it more user friendly